{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 13,
  "lineage": "09d93570-97ff-9fba-876f-1725d82a5cda",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:263535801242:internet-gateway/igw-09bded0d48be29d32",
            "id": "igw-09bded0d48be29d32",
            "owner_id": "263535801242",
            "tags": {
              "Name": "pjt_singapore_igw"
            },
            "tags_all": {
              "Name": "pjt_singapore_igw"
            },
            "vpc_id": "vpc-04a3713ab09431fdb"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf_pri_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:263535801242:route-table/rtb-0c4dd1f6f1d89377b",
            "id": "rtb-0c4dd1f6f1d89377b",
            "owner_id": "263535801242",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "pjt_singapore_pri_rt"
            },
            "tags_all": {
              "Name": "pjt_singapore_pri_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a3713ab09431fdb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf_pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:263535801242:route-table/rtb-0d0fd5c7146a566ba",
            "id": "rtb-0d0fd5c7146a566ba",
            "owner_id": "263535801242",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09bded0d48be29d32",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pjt_singapore_pub_rt"
            },
            "tags_all": {
              "Name": "pjt_singapore_pub_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a3713ab09431fdb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tf_igw",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf_pri_rt_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pri_sn3_id",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06181ae49fc08db6e",
            "route_table_id": "rtb-0c4dd1f6f1d89377b",
            "subnet_id": "subnet-055fc055b50eaef7b"
          },
          "dependencies": [
            "aws_route_table.tf_pri_rt",
            "aws_subnet.tf_sn",
            "aws_vpc.tf_vpc"
          ]
        },
        {
          "index_key": "pri_sn4_id",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ff93fe58d91f88f",
            "route_table_id": "rtb-0c4dd1f6f1d89377b",
            "subnet_id": "subnet-0e32f8f0c8d534f4a"
          },
          "dependencies": [
            "aws_route_table.tf_pri_rt",
            "aws_subnet.tf_sn",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf_pub_rt_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub_sn1_id",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a00714962bb82ff",
            "route_table_id": "rtb-0d0fd5c7146a566ba",
            "subnet_id": "subnet-0efd951a84d76155c"
          },
          "dependencies": [
            "aws_internet_gateway.tf_igw",
            "aws_route_table.tf_pub_rt",
            "aws_subnet.tf_sn",
            "aws_vpc.tf_vpc"
          ]
        },
        {
          "index_key": "pub_sn2_id",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b8323b91b534481d",
            "route_table_id": "rtb-0d0fd5c7146a566ba",
            "subnet_id": "subnet-0f1fea20dea9ad1d9"
          },
          "dependencies": [
            "aws_internet_gateway.tf_igw",
            "aws_route_table.tf_pub_rt",
            "aws_subnet.tf_sn",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf_sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "10.1.1.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:263535801242:subnet/subnet-0efd951a84d76155c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0efd951a84d76155c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "263535801242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pjt_singapore_10.1.1.0/24_sn"
            },
            "tags_all": {
              "Name": "pjt_singapore_10.1.1.0/24_sn"
            },
            "vpc_id": "vpc-04a3713ab09431fdb"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        },
        {
          "index_key": "10.1.2.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:263535801242:subnet/subnet-0f1fea20dea9ad1d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f1fea20dea9ad1d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "263535801242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pjt_singapore_10.1.2.0/24_sn"
            },
            "tags_all": {
              "Name": "pjt_singapore_10.1.2.0/24_sn"
            },
            "vpc_id": "vpc-04a3713ab09431fdb"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        },
        {
          "index_key": "10.1.3.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:263535801242:subnet/subnet-055fc055b50eaef7b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-055fc055b50eaef7b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "263535801242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pjt_singapore_10.1.3.0/24_sn"
            },
            "tags_all": {
              "Name": "pjt_singapore_10.1.3.0/24_sn"
            },
            "vpc_id": "vpc-04a3713ab09431fdb"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        },
        {
          "index_key": "10.1.4.0/24",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:263535801242:subnet/subnet-0e32f8f0c8d534f4a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e32f8f0c8d534f4a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "263535801242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pjt_singapore_10.1.4.0/24_sn"
            },
            "tags_all": {
              "Name": "pjt_singapore_10.1.4.0/24_sn"
            },
            "vpc_id": "vpc-04a3713ab09431fdb"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:263535801242:vpc/vpc-04a3713ab09431fdb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-097790069bd7e13a3",
            "default_route_table_id": "rtb-0f1afb8b1f9d377a3",
            "default_security_group_id": "sg-015136f848a2e7313",
            "dhcp_options_id": "dopt-074fa4df91b5dc8b0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04a3713ab09431fdb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f1afb8b1f9d377a3",
            "owner_id": "263535801242",
            "tags": {
              "Name": "pjt_singapore_vpc"
            },
            "tags_all": {
              "Name": "pjt_singapore_vpc"
            }
          }
        }
      ]
    }
  ]
}